Alpha 0.0.16.9 SQL Smart Contracts

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,61 @@ cachetools
 grpcio-reflection
 merkletools
 requests
+pynacl
+pqcrypto
+pystun3
+miniupnpc
+bit 
+web3
+stun
+pytest
+blockcypher
+solana
+qrcode
+mnemonic
+tqdm
+matplotlib
+networkx
+scikit-learn
+daphne
+aioredis
+pyjwt
+click
+starlette
+typing_extensions
+pydantic_core
+annotated_types
+symengine
+rustworkx
+python-dateutil
+dill
+scipy
+stevedore
+psutil
+aiohttp
+pycryptodome
+urllib3
+certifi
+sympy
+packaging
+Pillow
+pyparsing
+cycler
+kiwisolver
+pluggy
+iniconfig
+httpx
+protobuf
+python-dotenv
+bitcoin
+eth-account
+websockets
+solders
+udp
+pypng
+async_timeout
+motor 
+pymongo
+python-multipart
+psycopg2
+sanic
